支持多GPU同时运算，如此一来可以bachsize = 120, image = 256*256

--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -20,6 +20,8 @@
     "from ourtools import *\n",
     "from my_model.Basic_CNN import Basic_CNN\n",
     "from my_model.ADV_ResNet import *\n",
+    "from torch.autograd import Variable\n",
+    "\n",
     "import os\n",
     "\n",
     "# 查看训练曲线\n",
@@ -30,13 +32,15 @@
     "base_path = os.getcwd()\n",
     "batch_size = 120\n",
     "input_size = 128  # 图片大小\n",
-    "NUM_EPOCHS = 50\n",
+    "NUM_EPOCHS = 100\n",
     "LEARNING_RATE = 1e-3\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "# optimizer\n",
     "\n",
     "loss = F.cross_entropy\n",
-    "model = resnet34().to(device=DEVICE) # Basic_CNN().to(device=DEVICE)\n",
+    "model = resnet152(pretrained=False) # Basic_CNN().to(device=DEVICE)\n",
+    "model = model.cuda()\n",
+    "model = nn.DataParallel(model,device_ids=[0,1,2])\n",
     "# state_dict = torch.load('latest-ai.pth')\n",
     "# model.load_state_dict(state_dict)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
@@ -53,7 +57,7 @@
     "\"\"\"\n",
     "transform = transforms.Compose(\n",
     "    [\n",
-    "        transforms.CenterCrop(128),\n",
+    "        transforms.Resize([256, 256]),\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "    ])\n",
@@ -78,7 +82,7 @@
     "    pbar = tqdm(total=len(loader_eval), desc=\"Evaluation\", ncols=100)\n",
     "    with torch.no_grad():\n",
     "        for data, target in loader_eval:\n",
-    "            data, target = data.to(DEVICE), target.to(DEVICE)\n",
+    "            data, target = Variable(data.cuda()),Variable(target.cuda())\n",
     "            output = model(data)\n",
     "            loss_eval += criterion_eval(output, target).item()\n",
     "\n",
@@ -112,7 +116,7 @@
     "        )\n",
     "        for batch_idx, (data, target) in enumerate(train_dataloader):\n",
     "\n",
-    "            data, target = data.to(DEVICE), target.to(DEVICE)\n",
+    "            data, target = Variable(data.cuda()),Variable(target.cuda())\n",
     "            output = model(data)\n",
     "            loss = loss_func(output, target)\n",
     "            optimizer.zero_grad()\n",
