--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -30,9 +30,9 @@
     "tensorboard --logdir log\n",
     "\"\"\"\n",
     "base_path = os.getcwd()\n",
-    "batch_size = 120\n",
+    "batch_size = 160\n",
     "input_size = 128  # 图片大小\n",
-    "NUM_EPOCHS = 100\n",
+    "NUM_EPOCHS = 200\n",
     "LEARNING_RATE = 1e-3\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "# optimizer\n",
@@ -57,7 +57,7 @@
     "\"\"\"\n",
     "transform = transforms.Compose(\n",
     "    [\n",
-    "        transforms.Resize([256, 256]),\n",
+    "        transforms.Resize([224, 224]),\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "    ])\n",
@@ -79,7 +79,7 @@
     "    model_eval.eval()\n",
     "    loss_eval = 0\n",
     "    correct = 0.0\n",
-    "    pbar = tqdm(total=len(loader_eval), desc=\"Evaluation\", ncols=100)\n",
+    "    # pbar = tqdm(total=len(loader_eval), desc=\"Evaluation\", ncols=100)\n",
     "    with torch.no_grad():\n",
     "        for data, target in loader_eval:\n",
     "            data, target = Variable(data.cuda()),Variable(target.cuda())\n",
@@ -88,8 +88,8 @@
     "\n",
     "            pred = output.argmax(dim=1, keepdim=True)\n",
     "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
-    "            pbar.update(1)\n",
-    "    pbar.close()\n",
+    "            # pbar.update(1)\n",
+    "    # pbar.close()\n",
     "\n",
     "    loss_eval = loss_eval / loader_eval.dataset.__len__()\n",
     "    accuracy = correct / loader_eval.dataset.__len__()\n",
@@ -109,11 +109,11 @@
     "        # TODO: Implement the training loop\n",
     "\n",
     "        # YOUR CODE HERE\n",
-    "        pbar = tqdm(\n",
-    "            total=len(train_dataloader),\n",
-    "            desc=\"Train - Epoch {}\".format(epoch_idx),\n",
-    "            ncols=100,\n",
-    "        )\n",
+    "        # pbar = tqdm(\n",
+    "        #    total=len(train_dataloader),\n",
+    "        #    desc=\"Train - Epoch {}\".format(epoch_idx),\n",
+    "        #    ncols=100,\n",
+    "        # )\n",
     "        for batch_idx, (data, target) in enumerate(train_dataloader):\n",
     "\n",
     "            data, target = Variable(data.cuda()),Variable(target.cuda())\n",
@@ -122,8 +122,8 @@
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            pbar.update(1)\n",
-    "        pbar.close()\n",
+    "            # pbar.update(1)\n",
+    "        # pbar.close()\n",
     "\n",
     "        # END OF YOUR CODE\n",
     "        train_resp = evaluate(model, train_dataloader, loss_func)\n",
@@ -139,7 +139,9 @@
     "        train_losses.append(train_resp[\"loss\"])\n",
     "        val_accs.append(eval_resp[\"acc\"])\n",
     "        val_losses.append(eval_resp[\"loss\"])\n",
-    "        torch.save(model, \"latest-ai.pth\")\n",
+    "        \n",
+    "        if epoch_idx % 10 ==9:\n",
+    "            torch.save(model, \"latest-ai.pth\")\n",
     "\n",
     "    show_curve(train_accs, \"train acc\")\n",
     "    show_curve(train_losses, \"train loss\")\n",
