调整多GPU适配的参数，调节优化器参数

--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -37,13 +37,13 @@
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "# optimizer\n",
     "\n",
-    "loss = F.cross_entropy\n",
+    "loss = nn.CrossEntropyLoss()\n",
     "model = resnet152(pretrained=False) # Basic_CNN().to(device=DEVICE)\n",
     "model = model.cuda()\n",
     "model = nn.DataParallel(model,device_ids=[0,1,2])\n",
     "# state_dict = torch.load('latest-ai.pth')\n",
     "# model.load_state_dict(state_dict)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE, betas=(0.9, 0.99))\n",
     "\n",
     "\"\"\"\n",
     "transform = transforms.Compose(\n",
