--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -30,20 +30,23 @@
     "tensorboard --logdir log\n",
     "\"\"\"\n",
     "base_path = os.getcwd()\n",
-    "batch_size = 160\n",
+    "batch_size = 120\n",
     "input_size = 128  # 图片大小\n",
-    "NUM_EPOCHS = 200\n",
+    "NUM_EPOCHS = 50\n",
     "LEARNING_RATE = 1e-3\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "# optimizer\n",
     "\n",
     "loss = nn.CrossEntropyLoss()\n",
-    "model = resnet152(pretrained=False) # Basic_CNN().to(device=DEVICE)\n",
+    "\n",
+    "print (\"Loading pretrained data\")\n",
+    "model = resnet152(pretrained=True) # Basic_CNN().to(device=DEVICE)\n",
+    "model.fc=nn.Linear(2048,40)\n",
     "model = model.cuda()\n",
     "model = nn.DataParallel(model,device_ids=[0,1,2])\n",
     "# state_dict = torch.load('latest-ai.pth')\n",
     "# model.load_state_dict(state_dict)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE, betas=(0.9, 0.99))\n",
+    "optimizer = torch.optim.SGD(model.parameters(),lr=LEARNING_RATE,momentum=0.9,weight_decay=5e-4)\n",
     "\n",
     "\"\"\"\n",
     "transform = transforms.Compose(\n",
@@ -57,13 +60,13 @@
     "\"\"\"\n",
     "transform = transforms.Compose(\n",
     "    [\n",
-    "        transforms.Resize([224, 224]),\n",
+    "        transforms.Resize([128, 128]),\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "    ])\n",
     "\n",
     "\n",
-    "dataset = ImageFolder(\"Skin40\", transform=transform)\n",
+    "dataset = ImageFolder(\"New_Skin40\", transform=transform)\n",
     "print(dataset)\n",
     "print(dataset.class_to_idx)\n",
     "train_db, val_db = random_split(dataset, [1920, 480])\n",
