--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -31,9 +31,9 @@
     "\"\"\"\n",
     "base_path = os.getcwd()\n",
     "batch_size = 120\n",
-    "input_size = 128  # 图片大小\n",
-    "NUM_EPOCHS = 50\n",
-    "LEARNING_RATE = 1e-3\n",
+    "input_size = 224  # 图片大小\n",
+    "NUM_EPOCHS = 30\n",
+    "LEARNING_RATE = 7e-4\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "# optimizer\n",
     "\n",
@@ -60,9 +60,11 @@
     "\"\"\"\n",
     "transform = transforms.Compose(\n",
     "    [\n",
-    "        transforms.Resize([128, 128]),\n",
+    "        transforms.Resize((256,256)),\n",
+    "        transforms.RandomCrop((224,224)),\n",
+    "        transforms.RandomHorizontalFlip(),\n",
     "        transforms.ToTensor(),\n",
-    "        transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "        transforms.Normalize((0.485,0.456,0.406),(0.229,0.224,0.225))\n",
     "    ])\n",
     "\n",
     "\n",
